<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/buttonLayout"
    style="@style/Widget.AppCompat.Button.Borderless.Colored"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

<Button
    android:id="@+id/button1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/button_customized"
    android:text="@string/sensors"
    android:drawableTop="@drawable/ic_sensor"
    android:layout_marginBottom="30dp"
    />


<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_marginRight="10dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_customized"
        android:layout_weight="1"
        android:text="@string/game"
        android:drawableTop="@drawable/ic_game"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_customized"
        android:layout_weight="1"
        android:text="@string/gps"
        android:drawableTop="@drawable/ic_gps"/>
</LinearLayout>
</LinearLayout>

